// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> should match its empty snapshot 1`] = `
<span
  className="sc-bdvvtL caqreO k-Tag k-Tag--info k-Tag--regular k-Tag--light"
/>
`;

exports[`<Tag /> should match its snapshot with props 1`] = `
<span
  className="sc-bdvvtL caqreO k-Tag k-Tag--info k-Tag--regular k-Tag--light"
>
  <strong>
    5
  </strong>
   kittens
</span>
`;
